pytigergraph/1.6/core-functions/auth.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)[Next](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.6/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.6/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.6/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.6/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.6/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.6/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.6/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.6/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.6/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.6/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.6/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.6/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.6/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.6/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.6/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.6/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.6/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.6/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.6/release-notes/legacy-tg-versions)


pyTigerGraph 1.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/)
  * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.6/modules/core-functions/pages/auth.adoc)
### Contents
  * [getSecrets()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_getsecrets)
  * [showSecrets()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_showsecrets)
  * [createSecret()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_createsecret)
  * [dropSecret()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_dropsecret)
  * [getToken()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_gettoken)
  * [refreshToken()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_refreshtoken)
  * [deleteToken()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_deletetoken)


# Authentication Functions
### Contents
  * [getSecrets()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_getsecrets)
  * [showSecrets()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_showsecrets)
  * [createSecret()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_createsecret)
  * [dropSecret()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_dropsecret)
  * [getToken()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_gettoken)
  * [refreshToken()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_refreshtoken)
  * [deleteToken()](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_deletetoken)


The functions on this page authenticate connections and manage TigerGraph credentials. All functions in this module are called as methods on a [`TigerGraphConnection` object](https://docs.tigergraph.com/pytigergraph/current/core-functions/base).
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_getsecrets)getSecrets()
`getSecrets() → dict`
Issues a `SHOW SECRET` GSQL statement and returns the secret generated by that statement. Secrets are unique strings that serve as credentials when generating authentication tokens.
#### Returns:
A dictionary of `alias: secret_string` pairs.
#### Notes:
This function returns the masked version of the secret. The original value of the secret cannot be retrieved after creation.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_showsecrets)showSecrets()
`showSecrets() → dict`
DEPRECATED
Use `getSecrets()` instead.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_createsecret)createSecret()
`createSecret(alias: str = "", withAlias: bool = False) → Union[str, dict]`
Issues a `CREATE SECRET` GSQL statement and returns the secret generated by that statement. Secrets are unique strings that serve as credentials when generating authentication tokens.
#### Parameters:
  * `alias`: The alias of the secret. The system will generate a random alias for the secret if the user does not provide an alias for that secret. Randomly generated aliases begin with `AUTO_GENERATED_ALIAS_` and include a random 7-character string.
  * `withAlias`: Return the new secret as an `{"alias": "secret"}` dictionary. This can be useful if an alias was not provided, for example if it is auto-generated).


#### Returns:
The secret string.
#### Notes:
Generally, secrets are generated by the database administrator and used to generate a token. If you use this function, please consider reviewing your internal processes of granting access to TigerGraph instances. Normally, this function should not be necessary and should not be executable by generic users.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_dropsecret)dropSecret()
`dropSecret(alias: Union[str, list], ignoreErrors: bool = True) → str`
Drops a secret. See [this](https://docs.tigergraph.com/tigergraph-server/current/user-access/managing-credentials#_drop_a_secret) for more details.
#### Parameters:
  * `alias`: One or more alias(es) of secret(s).
  * `ignoreErrors`: Ignore errors arising from trying to drop non-existent secrets.


#### Raises:
`TigerGraphException` if a non-existent secret is attempted to be dropped (unless `ignoreErrors` is `True`). Re-raises other exceptions.
## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_gettoken)getToken()
`getToken(secret: str = None, setToken: bool = True, lifetime: int = None) → Union[tuple, str]`
Requests an authorization token.
This function returns a token only if REST++ authentication is enabled. If not, an exception will be raised. See [this](https://docs.tigergraph.com/admin/admin-guide/user-access-management/user-privileges-and-authentication#rest-authentication) for more details.
#### Parameters:
  * `secret (str, Optional)`: The secret (string) generated in GSQL using `CREATE SECRET`. See [this](https://docs.tigergraph.com/tigergraph-server/current/user-access/managing-credentials#_create_a_secret) for more details.
  * `setToken (bool, Optional)`: Set the connection’s API token to the new value (default: `True`).
  * `lifetime (int, Optional)`: Duration of token validity (in seconds, default 30 days = 2,592,000 seconds).


#### Returns:
If your TigerGraph instance is running version 3.5 or before, the return value is a tuple of `(<token>, <expiration_timestamp_unixtime>, <expiration_timestamp_ISO8601>)`. The return value can be ignored, as the token is automatically set for the connection after this call.
If your TigerGraph instance is running version 3.6 or later, the return value is just the token.
The expiration timestamp’s time zone might be different from your computer’s local time zone.   
---  
#### Raises:
`TigerGraphException` if REST++ authentication is not enabled or if an authentication error occurred.
#### Endpoint:
  * `POST /requesttoken` See [this](https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints#_request_a_token) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_refreshtoken)refreshToken()
`refreshToken(secret: str, token: str = "", lifetime: int = None) → tuple`
Extends a token’s lifetime.
This function works only if REST++ authentication is enabled. If not, an exception will be raised. See [this](https://docs.tigergraph.com/admin/admin-guide/user-access-management/user-privileges-and-authentication#rest-authentication) for more details.
#### Parameters:
  * `secret`: The secret (string) generated in GSQL using `CREATE SECRET`. See [this](https://docs.tigergraph.com/tigergraph-server/current/user-access/managing-credentials#_create_a_secret) for more details.
  * `token`: The token requested earlier. If not specified, refreshes current connection’s token.
  * `lifetime`: Duration of token validity (in seconds, default 30 days = 2,592,000 seconds) from current system timestamp.


#### Returns:
A tuple of `(<token>, <expiration_timestamp_unixtime>, <expiration_timestamp_ISO8601>)`. The return value can be ignored. New expiration timestamp will be now + lifetime seconds, _not_ current expiration timestamp + lifetime seconds.
The expiration timestamp’s time zone might be different from your computer’s local time zone.   
---  
#### Raises:
`TigerGraphException` if REST++ authentication is not enabled or if an authentication error occurs.
Note:
#### Endpoint:
  * `PUT /requesttoken` See [this](https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints#_refresh_a_token) for more details.


## [](https://docs.tigergraph.com/pytigergraph/1.6/core-functions/auth#_deletetoken)deleteToken()
`deleteToken(secret, token = None, skipNA = True) → bool`
Deletes a token.
This function works only if REST++ authentication is enabled. If not, an exception will be raised. See [this](https://docs.tigergraph.com/tigergraph-server/current/user-access/enabling-user-authentication#_enable_restpp_authentication) for more details.
#### Parameters:
  * `secret`: The secret (string) generated in GSQL using `CREATE SECRET`. See [this](https://docs.tigergraph.com/tigergraph-server/current/user-access/managing-credentials#_create_a_secret) for more details.
  * `token`: The token requested earlier. If not specified, deletes current connection’s token, so be careful.
  * `skipNA`: Don’t raise an exception if the specified token does not exist.


#### Returns:
`True`, if deletion was successful, or if the token did not exist but `skipNA` was `True`.
#### Raises:
`TigerGraphException` if REST++ authentication is not enabled or an authentication error occurred, for example if the specified token does not exist.
#### Endpoint:
  * `DELETE /requesttoken` See [this](https://docs.tigergraph.com/tigergraph-server/current/api/built-in-endpoints#_delete_a_token) for more details.


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


